--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.5.3",
     "next-auth": "^4.24.13",
     "react": "^18.3.1",
@@ -22,6 +24,8 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
